welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:6: error: not found: value casOrange
while(2*nbB < caseOrange+1 || 2*nbB> casOrange+1){avance();if(estSurBiscuit){nbB = nbB+1};if(estSurcaseOrange){caseOrange = caseOrange+1}} 
                                     ^RunHalf:6: error: not found: value estSurcaseOrange
while(2*nbB < caseOrange+1 || 2*nbB> casOrange+1){avance();if(estSurBiscuit){nbB = nbB+1};if(estSurcaseOrange){caseOrange = caseOrange+1}} 
                                                                                             ^